introduced workers kv to the project, implemented pin tags feature and make it sortable manually
